# QBopomofo

./: .gitignore  CLAUDE.md  NOTICE  README.md
.claude/commands/: tune.md
.claude/skills/: tune.md
.github/workflows/: release.yml
base/config/modes/: fuzzy-bopomofo.toml  hsu-bopomofo.toml  q-bopomofo.toml  standard-bopomofo.toml
base/engine/: LICENSE.upstream  Package.swift
base/engine/src/: composing_session.rs  lib.rs  path.rs  typing_mode.rs
data-provider/: build-custom.sh  build.sh
data-provider/chewing-data/: ORIGIN.md
data-provider/custom-data/: README.md  moedict-phrases.csv  phrases.csv  tw-politicians.csv
data-provider/tools/: extract_moedict.py  find_suspicious_freq1.py  generate_tw_politicians.py
mac/: Info.plist  Package.swift  build-app.sh  build-pkg.sh  install.sh  update-phrases.sh
mac/Resources/en.lproj/: InfoPlist.strings
mac/Resources/zh-Hant.lproj/: InfoPlist.strings
mac/Sources/: BuildInfo.swift  CandidatePanel.swift  InputController.swift  PreferencesWindow.swift  main.swift
mac/TestApp/: Package.swift  run.sh
mac/TestApp/Sources/: ChewingBridge.swift  ContentView.swift  TestAppMain.swift
mac/pkg/: postinstall
plans/: architecture.md  validator.md
win/: Cargo.toml  dev-reload.bat  install.bat  install.ps1  install_sandbox.ps1  run-dev.ps1  sandbox-setup.ps1  test-sandbox.wsb  uninstall.bat  uninstall.ps1
win/src/: candidate_window.rs  com.rs  controller.rs  debug_log.rs  edit_session.rs  key_event.rs  lib.rs  panic_guard.rs  preferences.rs  text_service.rs
win/tests/: controller_regression.rs
(+18 files in other folders)
